# latentmi

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: CHANGELOG.md  Makefile  conf.py  example.ipynb  index.md  make.bat  troubleshooting.md
src/latentmi/: __init__.py  lmi.py
tests/: test_latentmi.py
