[tool.poetry]
name = "latentmi"
version = "0.1.0"
description = "approximating mutual information in high dimensions"
authors = ["Gokul Gowri"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.3.0"
numpy = "^1.26.4"
tqdm = "^4.66.4"
scikit-learn = "^1.5.0"
scipy = "^1.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
