[tool.poetry]
name = "latentmi"
version = "0.1.2"
description = "approximating mutual information in high dimensions"
authors = ["Gokul Gowri"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.3.0"
numpy = "^1.26.4"
tqdm = "^4.66.4"
scikit-learn = "^1.5.0"
scipy = "^1.13.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^9.7.3"
jupyter = "^1.0.0"
myst-nb = {version = "^1.1.0", python = "^3.9"}
sphinx-autoapi = "^3.1.1"
sphinx-rtd-theme = "^2.0.0"
furo = "^2024.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
